fix: add overflow: hidden in CustomTable.module.scss

--- a/src/shared/ui/CustomTable/CustomTable.module.scss
+++ b/src/shared/ui/CustomTable/CustomTable.module.scss
@@ -4,6 +4,7 @@
 .customTable {
   border: 1px solid $gray-light;
   border-radius: 20px;
+  overflow: hidden;
 
   :global {
     .ant-table-content {
